Fix CORS configuration and improve error handling for web connectivity
Co-authored-by: pravallikatondapanati <pravallikatondapanati@gmail.com>